<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">TFG</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_crear_codigo">Crear Codigo</string>
    <string name="title_activity_resolver_codigo">ResolverCodigo</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_resumen_mision">ResumenMision</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_apuntes">Apuntes</string>
    <string name="title_activity_bienvenida">TFG</string>
    <string name="descr_avatar">Avatar del PNJ</string>
    <string name="descr_descripcion">Aquí es donde se muestra la descripción de la misión.</string>
    <string name="descr_retoPrimario">Principal objetivo a cumplir.</string>
    <string name="descr_retoSecundario">Segundo objetivo a cumplir.</string>
    <string name="boton_mision">Ir a la mision</string>
    <string name="descr_fondo">Fondo del nivel</string>
    <string name="descr_persDcha">Persona a la derecha</string>
    <string name="descr_persIzq">Persona a la izquierda</string>
    <string name="descr_boton_derecha">Pasar a la derecha</string>
    <string name="descr_boton_izquierda">Pasar a la izquierda</string>
    <string name="descr_nueva_mision">Esta mision es nueva</string>
    <string name="descr_miniatura">Miniatura de la ciudad</string>
    <string name="descr_opciones">Opciones</string>
    <string name="descr_apuntes">Apuntes</string>
    <string name="boton_saltar">Saltar</string>
    <string name="boton_siguiente">Siguiente…</string>
    <string name="boton_enviar">Enviar código</string>
    <string name="boton_indice">Ir a…</string>
    <string name="titulo">Titulo</string>
    <string name="mensaje_ayuda">Texto de ayuda.</string>
    <string name="mas">+</string>
    <string name="aviso_mensaje">Salir ahora hará que pierdas todo tu progreso. ¿Estás seguro?</string>
    <string name="aviso_titulo">Salir al mapa</string>
    <string name="descr_nuevo">Este apunte es nuevo</string>
    <string name="descr_flecha">Indicador</string>
    <string name="boton_ir_mision">Desde el principio</string>
    <string name="boton_ir_ultimo">Ultimo visitado</string>
    <string name="info_inicial">Información sobre el nivel</string>
    <string name="boton_salir">Salir al mapa</string>
    <string name="boton_reinicio">Reiniciar</string>
    <string name="aviso_reinicio">¿Está seguro? Perderá todo el progreso.</string>
    <string name="aviso_reinicio_titulo">REINICIAR JUEGO</string>
    <string name="boton_lenguajes">Lenguajes</string>
    <string name="aviso_lenguaje">¿Está seguro? Cambiar el lenguaje reiniciará el juego.</string>
    <string name="aviso_lenguaje_titulo">CAMBIAR LENGUAJE</string>
    <string-array name="lenguajes">
        <item>Java</item>
        <item>C</item>
    </string-array>
    <string name="cabecera_Java">public class Turing {
        \n\n\tpublic static void main(String[] args){
        \n\n\t\tPersona ada = new Persona();</string>
    <string name="pie_Java">\t}\n}</string>
    <string name="cabecera_C">int main (int argc, char* argv[]){ </string>
    <string name="pie_C">}</string>
    <string name="ayuda_interfaz_titulo_Java">Teclado I</string>
    <string name="ayuda_interfaz_Java">
<![CDATA[
    <p>Ahora mismo estás en la actividad para escribir código. Aquí es donde tienes que programar lo que hará Ada en el nivel, usando el teclado.</p>
    <p>En él hay teclas con muchas de las acciones que puede hacer Ada: andar, mirar, golpear, etc. (Se irán desbloqueando mientras juegas).</p>
    <p>También tiene teclas para escribir cosas propias de la programación, como bucles, variables o condiciones.</p>
    <p>Si quieres que Ada de un paso hacia adelante, pulsa la tecla <em>Andar</em>, y en la pantalla se escribirá el codigo que hace que Ada ande. En este caso es:</p>
    <font color=\"#B40404\"><em>ada.andar( );</em></font>
    <p>Recuerda: debes escribir cada orden en una línea distinta.</p>
    <p>Pulsa <img src=\"boton_ayuda\"/> si quieres volver a ver esta ayuda.</p>
    ]]>
    </string>
    <string name="ayuda_interfaz_titulo_C">Teclado I</string>
    <string name="ayuda_interfaz_C">
<![CDATA[
    <p>Ahora mismo estás en la actividad para escribir código. Aquí es donde tienes que programar lo que hará Ada en el nivel, usando el teclado.</p>
    <p>En él hay teclas con muchas de las acciones que puede hacer Ada: andar, mirar, golpear, etc. (Se irán desbloqueando mientras juegas).</p>
    <p>También tiene teclas para escribir cosas propias de la programación, como bucles, variables o condiciones.</p>
    <p>Si quieres que Ada de un paso hacia adelante, pulsa la tecla <em>Andar</em>, y en la pantalla se escribirá el codigo que hace que Ada ande. En este caso es:</p>
    <font color=\"#B40404\"><em>andar( );</em></font>
    <p>Recuerda: debes escribir cada orden en una línea distinta.</p>
    <p>Pulsa <img src=\"boton_ayuda\"/> si quieres volver a ver esta ayuda.</p>
    ]]>
    </string>
    <string name="ayuda_teclado_titulo_Java">Teclado II</string>
    <string name="ayuda_teclado_Java">
<![CDATA[
    <p>A veces con pulsar una tecla eso no es suficiente, y quieres cambiar un poco la acción. Para ello tienes que pulsar otras teclas que editen la primera orden.</p>
    <p>Si quieres que Ada ande hacia arriba, por ejemplo, después de haber pulsado <em>Andar</em> pulsa la flecha de <em>Arriba</em>, y el código cambiará automáticamente:</p>
    <font color=\"#B40404\"><em>ada.andar( ARRIBA );</em></font>
    <p>Es decir, una vez que has escrito un método puedes continuar añadiéndole atributos.</p>
    <p>Ve pulsando teclas hasta tener el código perfecto.</p>
    <p>Si se te olvida adonde tienes que ir, con <img src=\"boton_ver_mapa\"/> puedes ver de nuevo el mapa.</p>
    ]]>
    </string>
    <string name="ayuda_teclado_titulo_C">Teclado</string>
    <string name="ayuda_teclado_C">
<![CDATA[
    <p>Para jugar a <strong>Turing</strong> necesitas escribir código. Para ello tienes usar el teclado.</p>
    <p>En él hay teclas con muchas de las acciones que puede hacer Ada: andar, mirar, golpear, etc. (Se irán desbloqueando mientras juegas).</p>
    <p>También tiene teclas para escribir cosas propias de la programación, como bucles, variables o condiciones.</p>
    <p>Si quieres que Ada de un paso hacia adelante, pulsa la tecla <em>Andar</em>, y en la pantalla se escribirá el codigo que hace que Ada ande. En este caso es:</p>
    <font color=\"#B40404\"><em>andar( );</em></font>
    <p>¡Pero aún no has acabado! A veces con eso no es suficiente, y quieres cambiar un poco la acción. Si quieres que Ada ande hacia arriba, por ejemplo, después de haber pulsado <em>Andar</em> pulsa la flecha de <em>Arriba</em>, y el código cambiará automáticamente:</p>
    <font color=\"#B40404\"><em>andar( ARRIBA );</em></font>
    <p>Es decir, una vez que has escrito un método puedes continuar añadiéndole atributos.</p>
    <p>Ve pulsando teclas hasta tener el código perfecto.</p>
    ]]>
    </string>
    <string name="ayuda_andar_titulo">Andar</string>
    <string name="ayuda_andar">
<![CDATA[
    <p><strong>andar</strong> mueve a Ada una baldosa en la dirección seleccionada. Si pulsas la tecla aparecerá el código:</p>
    <font color=\"#B40404\"><em>ada.andar( );</em></font>
    <p>Este método acepta un atributo: la dirección en la que quieres que se mueva. Puedes pulsar una de las cuatro direcciones representadas por las flechas para elegir en qué dirección avanzar. Si pulsas la flecha hacia la derecha, por ejemplo: </p>
    <font color=\"#B40404\"><em>ada.andar(DERECHA); </em></font>
    <p>Este parámetro es opcional. Si no seleccionas ninguna dirección, Ada se moverá una baldosa hacia donde esté mirando.</p>
    ]]>
    </string>
    <string name="ayuda_andar_titulo_C">Andar</string>
    <string name="ayuda_andar_C">
<![CDATA[
    <p><strong>andar</strong> mueve a Ada una baldosa en la dirección seleccionada. Si pulsas la tecla aparecerá el código:</p>
    <font color=\"#B40404\"><em>andar( );</em></font>
    <p>Este método acepta un atributo: la dirección en la que quieres que se mueva. Puedes pulsar una de las cuatro direcciones representadas por las flechas para elegir en qué dirección avanzar. Si pulsas la flecha hacia la derecha, por ejemplo: </p>
    <font color=\"#B40404\"><em>andar(DERECHA); </em></font>
    <p>Este parámetro es opcional. Si no seleccionas ninguna dirección, Ada se moverá una baldosa hacia donde esté mirando.</p>
    ]]>
    </string>
    <string name="ayuda_clases_titulo_Java">Clases y objetos</string>
    <string name="ayuda_clases_Java">
<![CDATA[
    <p><strong>Java</strong> es un lenguaje de programación <strong>orientado a objetos</strong>. Esto quiere decir que su lógica está basada en objetos y sus interacciones.</p>
    <p>Una <strong>clase</strong> es el esquema a partir del cual se crea un objeto, y contiene sus atributos y métodos.</p>
    <p>Los atributos son variables propias de esa clase. Los atributos marcan <em>lo que es</em> el objeto. Y los métodos componen <em>lo que puede hacer</em>: andar, mirar, golpear&#8230;</p>
    <p>A partir de una clase se pueden crear, que son los que utilizamos en el código: el objeto <em>ada</em>, el objeto <em>herrero</em> o el objeto <em>persona</em>. Todos son variaciones a partir de un mismo molde: la clase Persona.</p>
    <p>Así es como funciona Java: se crean objetos y se utilizan sus métodos y atributos para que interactuen entre ellos.</p>
    ]]>
    </string>
    <string name="ayuda_clase_persona_titulo_Java">Clase Persona</string>
    <string name="ayuda_clase_persona_Java"><![CDATA[
    <p>
    public class Persona {<br><br>
        \t//Atributos<br>
        \tprivate String nombre;<br>
        \tprivate int salud;<br>
        \tprivate int fuerza;<br>
        \tprivate int experiencia;<br><br>

        \t//Constructor<br>
        \tpublic Persona (){<br>
        \t\t/*Código del constructor*/<br>
        \t}<br><br>

        \t//Métodos<br>
        \tpublic void andar(){<br>
        \t\t/*Código para dar un paso hacia adelante*/<br>
        \t}<br><br>

        \tpublic void andar(int direccion){<br>
        \t\t/*Código para dar un paso en la direccion*/<br>
        \t}<br><br>

        \tpublic void golpear(){<br>
        \t\t/*Código para dar un golpe hacia adelante*/<br>
        \t}<br><br>

        \tpublic void golpear(int direccion){<br>
        \t\t/*Código para dar un golpe hacia la direccion*/<br>
        \t}<br><br>

        \tpublic int mirar(){<br>
        \t\t/*Código para mirar hacia adelante.<br>
        \t\tDevuelve un entero con el código de lo que haya.*/<br>
        \t}<br><br>

        \tpublic int mirar(int direccion){<br>
        \t\t/*Código para mirar qué hay un paso en la direccion dada.*/<br>
        \t}<br><br>

        \tpublic int escuchar(){<br>
        \t\t/*Código para escuchar alrededor. <br>Devuelve un entero que varía según el nivel.*/<br>
        \t}<br><br>

       \t\\\\[&#8230;]<br><br>

    }</p>
    ]]></string>
    <string name="ayuda_nota_nombres_titulo">Nota I</string>
    <string name="descr_boton_norte">Ir al norte</string>
    <string name="descr_boton_sur">Ir al sur</string>
    <string name="descr_boton_oeste">Ir al oeste</string>
    <string name="descr_boton_este">Ir al este</string>
</resources>