<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.alfonsomolina.tfg.ApuntesActivity"
    android:id="@+id/raiz"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/titulo"
        android:text="@string/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="end" />

    <TextView

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mensaje_ayuda"
        android:id="@+id/mensajeAyuda"
        android:layout_below="@id/titulo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_above="@+id/botones"
        android:layout_marginBottom="20dp"
        android:scrollbars = "vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/botones"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:id="@+id/boton_izquierda"
            android:onClick="pasarPagina"
            android:background="@drawable/boton_pasar_izquierda"
            android:contentDescription="@string/descr_boton_izquierda"
            android:adjustViewBounds="true" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boton_indice"
            android:id="@+id/boton_indice"
            android:onClick="mostrarIndice"/>

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="fill_parent"
            android:id="@+id/boton_derecha"
            android:onClick="pasarPagina"
            android:background="@drawable/boton_pasar_derecha"
            android:contentDescription="@string/descr_boton_derecha"
            android:adjustViewBounds="true"
            />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indice"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/botones"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nuevo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/nuevo"
        android:contentDescription="@string/descr_nuevo"
        android:visibility="invisible"/>


</RelativeLayout>
